--- a/server/views/PurchaseRetrunPDF.ejs
+++ b/server/views/PurchaseRetrunPDF.ejs
@@ -6,54 +6,77 @@
     }
 
     .headingName {
-         position: absolute;
-         margin-left: 39.2%;
-         width: 30%;
-         color: red;
-         margin-top: 0px;
-         font-size: 14px !important;
-      }
+        position: absolute;
+        margin-left: 39.2%;
+        width: 30%;
+        color: red;
+        margin-top: 0px;
+        font-size: 16px !important;
+    }
 
+    table tr th {
+        font-size: 16px;
+    }
+
+    table tr td {
+        font-size: 16px;
+    }
+
+    table tfoot tr th {
+        font-size: 16px;
+    }
+
+    li {
+        font-size: 18px;
+    }
 </style>
+
 <body>
     <section>
         <%- include('./header.ejs', {pageNumber: 1}) %>
-        <div>
-            <div style="border-bottom: 1px solid; width: 38%; position:absolute; margin-top: 1%;"> </div>
-            <div style="border-bottom: 1px solid; width: 38%; float: right; position: relative; margin-top: 1%;"></div>
-            <span class="headingName">PURCHASE RETURN INVOICE</span>
-         </div>
+            <div>
+                <div style="border-bottom: 1px solid; width: 38%; position:absolute; margin-top: 1%;"> </div>
+                <div style="border-bottom: 1px solid; width: 38%; float: right; position: relative; margin-top: 1%;">
+                </div>
+                <span class="headingName">PURCHASE RETURN INVOICE</span>
+            </div>
     </section>
     <section style="width: 100%; height: 30px;">
         <div class="CustomerRow">
             <div class="col1">
                 <ul class="ul1">
-                    <li>Supplier Name:</li>   
+                    <li style=" font-size: 18px !important;">Supplier Name:</li>
                 </ul>
                 <ul class="ul2">
-                    <li> <%=data.supplier.Name%> </li>
+                    <li style=" font-size: 16px !important;">
+                        <%=data.supplier.Name%>
+                    </li>
                 </ul>
             </div>
             <div class="col3">
                 <ul class="ul1">
-                    <li>InvoiceNo:</li>   
+                    <li style=" font-size: 18px !important;">InvoiceNo:</li>
                 </ul>
                 <ul class="ul2">
-                    <li> <%=data.PurchaseMaster.SystemCn%> </li>
+                    <li style=" font-size: 16px !important;">
+                        <%=data.PurchaseMaster.SystemCn%>
+                    </li>
                 </ul>
             </div>
 
             <div class="col2">
                 <ul class="ul1">
-                            <li>Return Date:</li>
+                    <li style=" font-size: 18px !important;">Return Date:</li>
                 </ul>
-                <ul class="ul2" >
-                            <li><%=data.PurchaseMaster.CreatedOn %> </li>
+                <ul class="ul2">
+                    <li style=" font-size: 16px !important;">
+                        <%=data.PurchaseMaster.CreatedOn %>
+                    </li>
                 </ul>
             </div>
         </div>
     </section>
- 
+
     <section>
         <table>
             <thead>
@@ -82,7 +105,7 @@
                         <td>
                             <%=i.ProductTypeName%>/<%=i.ProductName%>
                         </td>
-                       
+
                         <td>
                             <%=i.UnitPrice%>
                         </td>
@@ -95,7 +118,7 @@
                         <td>
                             <%=i.SubTotal%>
                         </td>
-                        
+
                         <td>
                             <%=i.GSTAmount%>
                         </td>
@@ -117,7 +140,7 @@
                     <th>
                         <%=data.PurchaseMaster.Quantity%>
                     </th>
-                  
+
                     <th>
                         <%=data.PurchaseMaster.DiscountAmount%>
                     </th>
