--- a/web1/src/app/shared/dashcard/dashcard.component.css
+++ b/web1/src/app/shared/dashcard/dashcard.component.css
@@ -1,129 +1,154 @@
 .card {
-    border-left: 5px solid rgb(255, 81, 0);
-    box-shadow: 7px 7px 17px #6b6866;
-    transition: 1s;
-    margin-top: 30px !important;
-    animation-name: example;
-    animation-duration: 9s;
-    background: linear-gradient(90deg, rgba(255, 255, 255, 0.233) 0%, rgb(255, 255, 255) 100%);
-    border-bottom: dashed;
+  border-left: 5px solid rgb(255, 81, 0);
+  box-shadow: 7px 7px 17px #6b6866;
+  transition: 1s;
+  margin-top: 30px !important;
+  animation-name: example;
+  animation-duration: 9s;
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.233) 0%, rgb(255, 255, 255) 100%);
+  border-bottom: dashed;
+}
+
+.cardM {
+  border: 0px solid rgb(255, 81, 0);
+  border-radius: 5%;
+  box-shadow: inset 5px 10px 10px 4px #00000080;
+  transition: 1s;
+  margin-top: 30px !important;
+  animation-name: example;
+  animation-duration: 9s;
+  background: linear-gradient(219deg, rgb(255 81 0) 10%, rgb(255, 255, 255) 15%);
+}
+
+.content {
+  background-size: 100%;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(69, 69, 69);
+}
+
+.float-right {
+  float: right;
+}
+
+.fa-arrow-right {
+  color: rgb(255, 81, 0)
+}
+
+.crds {
+  padding: 0% 2%;
+}
+
+.hoc {
+  color: rgb(69, 69, 69);
+}
+
+.card:hover {
+  transform: scale(0.9);
+  box-shadow: 5px 5px 10px #de5c04;
+  border: 2px solid #f37623;
+}
+
+.cards {
+  background: linear-gradient(90deg, rgba(255, 89, 0, 0.8354692218684349) 0%, rgba(10, 22, 110, 0.7094188017003676) 100%);
+  border-radius: 10px;
+  border: none;
+  position: relative;
+  margin-bottom: 0px;
+  box-shadow: 0 0.46875rem 2.1875rem rgb(90 97 105 / 10%), 0 0.9375rem 1.40625rem rgb(90 97 105 / 10%), 0 0.25rem 0.53125rem rgb(90 97 105 / 12%), 0 0.125rem 0.1875rem rgb(90 97 105 / 10%);
+}
+
+.c1 {
+  animation: bbb 2s linear infinite;
+}
+
+@keyframes bbb {
+  0% {
+    transform: translateY(0)
   }
 
-  .cardM{
-    border: 0px solid rgb(255, 81, 0);
-    border-radius: 10%;
-    box-shadow: 2px 2px 10px #1e267261;
-    transition: 1s;
-    margin-top: 30px !important;
-    animation-name: example;
-    animation-duration: 9s;
-    background: linear-gradient(219deg, rgb(255 81 0) 10%, rgb(255, 255, 255) 15%);
+  50% {
+    transform: translateY(-20px);
+    color: red;
   }
-  
-  .content {
-    background-size: 100%;
+
+  100% {
+    transform: translateY(0);
   }
-  
-  a {
-    text-decoration: none;
-    color: rgb(69, 69, 69);
+}
+
+.c1:nth-child(1) {
+  animation-delay: .2s;
+}
+
+.c1:nth-child(2) {
+  animation-delay: .4s;
+}
+
+.c1:nth-child(3) {
+  animation-delay: .6s;
+}
+
+.c1:nth-child(4) {
+  animation-delay: .2s
+}
+
+.c1:nth-child(5) {
+  animation-delay: .4s
+}
+
+.c1:nth-child(6) {
+  animation-delay: .6s;
+}
+
+.cardName {
+  font-size: 21px;
+  font-weight: 600;
+  margin-top: 5%;
+}
+
+.p-4 {
+  padding: 1.5rem !important;
+}
+
+.imgani {
+  padding: 10px;
+  background: #1e2672;
+  border-radius: 42px;
+  border: 4px solid #ff5100;
+  animation: rotateAnimation 10s ease-in-out infinite;
+  transition: all 10s;
+}
+
+@keyframes rotateAnimation {
+  0% {
+    background: #1e2672;
+    transform: rotate(0deg); /* Initial rotation angle */
   }
-  
-  .float-right {
-    float: right;
+  50% {
+    background: #ff5100;
+     /* Final rotation angle */
   }
-  
-  .fa-arrow-right {
-    color: rgb(255, 81, 0)
+  100% {
+    background: #1e2672;
+    transform: rotate(360deg); /* Final rotation angle */
   }
-  
-  .crds {
-    padding: 0% 2%;
-  }
-  
-  .hoc {
-    color: rgb(69, 69, 69);
-  }
-  
-  .card:hover {
-    transform: scale(0.9);
-    box-shadow: 5px 5px 10px #de5c04;
-    border: 2px solid #f37623;
-  }
-  
-  .cards {
-    background: linear-gradient(90deg, rgba(255, 89, 0, 0.8354692218684349) 0%, rgba(10, 22, 110, 0.7094188017003676) 100%);
-    border-radius: 10px;
-    border: none;
-    position: relative;
-    margin-bottom: 0px;
-    box-shadow: 0 0.46875rem 2.1875rem rgb(90 97 105 / 10%), 0 0.9375rem 1.40625rem rgb(90 97 105 / 10%), 0 0.25rem 0.53125rem rgb(90 97 105 / 12%), 0 0.125rem 0.1875rem rgb(90 97 105 / 10%);
-  }
-  
-  .c1 {
-    animation: bbb 2s linear infinite;
-  }
-  
-  @keyframes bbb {
-    0% {
-      transform: translateY(0)
-    }
-  
-    50% {
-      transform: translateY(-20px);
-      color: red;
-    }
-  
-    100% {
-      transform: translateY(0);
-    }
-  }
-  
-  .c1:nth-child(1) {
-    animation-delay: .2s;
-  }
-  
-  .c1:nth-child(2) {
-    animation-delay: .4s;
-  }
-  
-  .c1:nth-child(3) {
-    animation-delay: .6s;
-  }
-  
-  .c1:nth-child(4) {
-    animation-delay: .2s
-  }
-  
-  .c1:nth-child(5) {
-    animation-delay: .4s
-  }
-  
-  .c1:nth-child(6) {
-    animation-delay: .6s;
-  }
-  
+}
+
+
+@media screen and (max-width: 1500px) and (min-width: 1200px) {
   .cardName {
-    font-size: 21px;
-    font-weight: 600;
-    margin-top: 5%;
+    font-size: 17px;
   }
-  
+
+  .card {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
+  }
+
   .p-4 {
-    padding: 1.5rem !important;
+    padding: .7rem !important;
   }
-  
-  @media screen and (max-width: 1500px) and (min-width: 1200px) {
-    .cardName {
-      font-size: 17px;
-    }
-  
-    .card {
-      padding-left: 0px !important;
-      padding-right: 0px !important;
-    }
-  
-    .p-4 {
-      padding: .7rem !important;
-    }
-  }
+}
