--- a/web1/src/app/admin/dashborad.component.html
+++ b/web1/src/app/admin/dashborad.component.html
@@ -9,7 +9,7 @@
         </div>
     </section>
 
-    <section class="content d-md-none d-block" style="background: linear-gradient(139deg, rgb(255 81 0 / 29%) 50%, rgb(30 38 114 / 35%) 50%)">
+    <section class="content d-md-none d-block bgchange">
         <div class="container-fluid ">
         <div class="row p-4 mt-0 ">
             <div *ngFor="let stat of cards" class="col-xl-2 col-lg-4 col-md-6 col-sm-6 col-6  crdsa" >
