--- a/web1/src/app/common/page404.component.css
+++ b/web1/src/app/common/page404.component.css
@@ -26,7 +26,7 @@ body {
     font-weight: 300;
   }
   .message-box h1 {
-    font-size: 40px;
+    font-size: clamp(20px, 4vw, 40px);
     line-height: 36px;
     margin-bottom: 15px;
     transition:  0.1s linear;
@@ -85,17 +85,17 @@ body {
   @media (max-width: 450px) {
     svg {
       position: absolute;
-      top: 50%;
+      top: 0%;
       left: 50%;
       margin-top: -250px;
       margin-left: -190px;
     }
     .message-box {
       top: 50%;
-      left: 50%;
+      left: 5%;
       margin-top: -100px;
-      margin-left: -190px;
-      text-align: center;
+      margin-left: 0px;
+      text-align: left;
     }
   }
   
