--- a/web1/src/app/common/page404.component.html
+++ b/web1/src/app/common/page404.component.html
@@ -10,15 +10,18 @@
       </svg>
       <div class="message-box">
         <h1>This is not an Error !</h1>
-        <p style="font-size: 25px;letter-spacing: 1px; padding-top: 11px;line-height: 30px;">
+        <p style="font-size: clamp(15px, 4vw, 25px);letter-spacing: 1px; padding-top: 11px;line-height: 30px;">
           Message from OPTICALGURU <br> We keep your mistakes on our records. 
         </p>
-        <p style="font-size: 25px;letter-spacing: 1px; padding-top: 11px;line-height: 30px; font-weight: 500; color: #f2ff01;">
+        <p style="font-size: clamp(15px, 4vw, 25px);letter-spacing: 1px; padding-top: 11px;line-height: 30px; font-weight: 500; color: #f2ff01;">
          
          Please Check Your Internet Connection.
         </p>
-        <p style="font-size: 25px;letter-spacing: 1px; padding-top: 11px; line-height: 30px;">          
+        <p class="d-none d-md-block" style="font-size: clamp(15px, 4vw, 25px);letter-spacing: 1px; padding-top: 11px; line-height: 30px;">          
           Please share a screenshot to OPTICALGURU Team <br> Thankyou.
+        </p>
+        <p class="d-block d-md-none" style="font-size: clamp(18px, 4vw, 25px);letter-spacing: 1px; padding-top: 11px; line-height: 30px;">          
+          Please share a screenshot to <br> OPTICALGURU Team Thankyou.
         </p>
         <div class="buttons-con">
           <div class="action-link-wrap">
