--- a/web1/src/app/sale/billing/billing.component.css
+++ b/web1/src/app/sale/billing/billing.component.css
@@ -76,7 +76,8 @@ textarea.mat-input-element {
     font-weight: 600;
 }
 
-.mat-option:hover:not(.mat-option-disabled), .mat-option:focus:not(.mat-option-disabled) {
+.mat-option:hover:not(.mat-option-disabled),
+.mat-option:focus:not(.mat-option-disabled) {
     background: rgb(30 38 114);
     color: white;
 }
@@ -281,7 +282,7 @@ input::-webkit-inner-spin-button {
 
 
 
-.pdfpower{
+.pdfpower {
     font-size: 16px;
     background: #0070ff;
     border: none;
@@ -304,8 +305,8 @@ button:disabled.whatsapp {
     color: #878787 !important;
 }
 
-.tab-content{
-    overflow: auto; 
+.tab-content {
+    overflow: auto;
     height: 163px;
     border: 1px solid #0027ff
 }
@@ -314,31 +315,32 @@ button:disabled.whatsapp {
 
 
 @media screen and (min-width: 768px) and (max-width: 1300px) {
-   .card  {
-      zoom:70% !important
+    .card {
+        zoom: 70% !important
     }
-  }
+}
 
 @media screen and (max-width: 1050px) and (min-width: 992px) {
-   .tab-content  {
-      zoom:90% !important;
-      font-size: 15px !important;
+    .tab-content {
+        zoom: 90% !important;
+        font-size: 15px !important;
     }
-  }
+}
+
 @media screen and (max-width: 1600px) and (min-width: 1301px) {
-   .tab-content  {
-      zoom:85% !important;
+    .tab-content {
+        zoom: 85% !important;
     }
-  }
+}
 
 
 @media screen and (max-width: 425px) and (min-width: 320px) {
-    .tab-content{
-       height:100%;
-    
+    .tab-content {
+        height: 100%;
+
     }
 
-    .box{
+    .box {
         width: 45px !important;
         font-weight: 600;
         color: red;
@@ -346,9 +348,23 @@ button:disabled.whatsapp {
         font-weight: 500 !important;
     }
 
+
     .nav-tabs .nav-link {
         font-size: 13px !important;
         color: #0000008c;
         padding: 5px 4px 2px 20px !important;
-        background: #2200ff74;}
-  }
+        background: #2200ff74;
+    }
+
+    .mobButton {
+        text-align: right;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .mobButton button {
+        padding: 4px 20px !important;
+    }
+
+}
