--- a/web1/src/app/shared/dashcard/dashcard.component.html
+++ b/web1/src/app/shared/dashcard/dashcard.component.html
@@ -23,7 +23,7 @@
                     </span>
             </div>
             <div class="col-3 p-0" style="padding-left: 25px !important;">
-                <img src={{icon}} class="float-left" alt="" width="60" height="60" style="padding: 10px;
+                <img src={{icon}} class="float-left " alt="" width="60" height="60"  style="padding: 10px;
                 background: #1e2672; border-radius: 42px; border-radius: 42px; border: 4px solid #ff5100;">
             </div>
         </div>
@@ -35,8 +35,7 @@
         <div class="row" style="padding: 0px;">
             <div class="col-12 pt-3 text-center">
                 <div class="col-12" >
-                    <img src={{icon}} class="float-left" alt="" width="60" height="60" style="padding: 10px;
-                    background: #1e2672; border-radius: 42px; border-radius: 42px; border: 4px solid #ff5100;">
+                    <img src={{icon}} class="float-left imgani" alt="" width="60" height="60" >
                 </div>
                 <div class="col-12 pt-3 ">
                     <span class="ml-auto name" style="font-size:1.1rem;font-weight:600;margin-top:5%;">
